# vellum

./: Cargo.toml  Makefile
.github/workflows/: rust_ci.yml
src/: main.rs
vellum-app/src/: actions.rs  application.rs
vellum-core/: Cargo.toml
vellum-core/src/: cursor.rs  document.rs  editor.rs
vellum-tui/src/: hello_world.txt  main.rs  tui.rs
